# nlim-web

./: .gitignore  LICENSE  Makefile  Procfile  index-dev.html  nlim-web.cabal  set_js_url.sh  set_variables.sh  shake.hs  stack-client.yaml  stack.yaml  upload_js_to_cloudcube.sh
client/: Main.hs
server/: Main.hs
shared/: Lib.hs
static/: all.min.js  index-dev.html  index-prod.html  index.html  nlim.css
