name:                nlim-web
version:             0.1.0.0
homepage:            https://github.com/nlim/nlim-web#Readme
license:             BSD3
license-file:        LICENSE
author:              Nathaniel Lim
maintainer:          nathaniel.j.lim@gmail.com
copyright:           Copyright: (c) 2017 Nathaniel Lim
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , stack-server.yaml
                   , stack-client.yaml
cabal-version:       >=1.10

executable client
  main-is:             Main.hs
  other-modules:       Lib
  if !impl(ghcjs)
    buildable: False
  else
    hs-source-dirs:    client, shared
    build-depends:     base
                     , miso
                     , safe
    default-language:  Haskell2010
    ghc-options:       -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

executable server
  main-is:             Main.hs
  other-modules:       Lib

  if impl(ghcjs)
    buildable: False
  else
    hs-source-dirs:    server, shared
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N
    build-depends:     base
                     , aeson
                     , containers
                     , http-types 
                     , lucid
                     , miso
                     , mtl
                     , network-uri
                     , servant
                     , servant-lucid
                     , servant-server
                     , wai
                     , wai-extra
                     , warp
                     , lens
                     , safe

    default-language: Haskell2010
